add bootstrap classes for css styling

--- a/index.html
+++ b/index.html
@@ -8,23 +8,50 @@
   </head>
   <body>
     <div class="container">
-      <h1>Destination Delaware</h1>
-      <h2>Where?</h2>
-      <h3></h3>
-      <p></p>
-      <h3></h3>
-      <p></p>
-      <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
-      <h3></h3>
-      <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
+      <div class="jumbotron">
+        <h1>Destination Delaware</h1>
+        <img src="img/Delaware.gif" alt="Wayne and Garth in Delaware">
+        <h2>Dela-where?</h2>
+      </div>
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h2>Our Trip</h2>
+        </div>
+        <div class="panel-body">
+          <h3 class="bg-success">The Plan</h3>
+          <p>We're going to Delaware! We've been waiting our entire lives for this once in a lifetime opportunity to visit one of the most beautiful and interesting places in the universe. It's definitely not gonna be boring!</p>
+          <h3 class="bg-info">Things We'll See</h3>
+          <ul>
+            <li>Delaware</li>
+            <li>?</li>
+            <li>?</li>
+          </ul>
+          <h3 class="bg-warning">Things We'll Do</h3>
+          <ul>
+            <li>Stuff</li>
+            <li>Things</li>
+            <li>?</li>
+          </ul>
+        </div>
+      </div>
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h2>Quotes</h2>
+        </div>
+        <div class="panel-body">
+          <h3 class="bg-danger">Things Others Have Said About Their Trips to Delaware</h3>
+            <div class="text-warning">
+              <blockquote>
+                <p>Welp, I went there...</p>
+                <footer>Actual Person who went to Delaware</footer>
+              </blockquote>
+              <blockquote>
+                <p>I should have stayed home!</p>
+                <footer>Someone who regrets their trip to Delaware</footer>
+              </blockquote>
+            </div>
+          </div>
+        </div>
     </div>
   </body>
 </html>
