add travel packages in grid and css style for packages

--- a/index.html
+++ b/index.html
@@ -52,6 +52,23 @@
             </div>
           </div>
         </div>
+      <div class="row">
+        <h2>Travel Packages</h2>
+        <div class="col-md-6">
+          <h3 class="go">Go to Delaware?</h3>
+          <ul class="go">
+            <li>Cost: $</li>
+            <li>Benefit: ?</li>
+          </ul>
+        </div>
+        <div class="col-md-6">
+          <h3 class="stay">Don't go to Delaware</h3>
+          <ul class="stay">
+            <li>Cost: Free</li>
+            <li>Benefit: Well-being</li>
+          </ul>
+        </div>
+      </div>
     </div>
   </body>
 </html>
